# grokking-carries

./: .gitignore  README.md  main.py  pyproject.toml
data/: test.jsonl
notebooks/: 01_generate_data.ipynb  02_build_grokking_heart.ipynb  03_learning_pipeline.ipynb  04_attention_ablation.ipynb  05_linear_probing.ipynb  06_logits_lens.ipynb  07_alu_commutativity_check.ipynb
scripts/: 01_generate_data.ipynb  list_classes_methods.sh
src/grokking_carries/: .config.py.swp  config.py  types.py
src/grokking_carries/data/: generator.py  tokenizer.py
src/grokking_carries/interpretability/: hooks.py
src/grokking_carries/model/: components.py  transformer.py
